VLC control don't all work

These controls don't work. When clicking they have a white box around them and that's it. Also when there are items in a playlist only the previous (<) button is active and not the next (>) one.

imageimage

Versions:
VLC: 8th August 2021 nightly build
-OS: Windows 10.0.19043.1151

Edited by Ghost User