qt: fix inverted callbacks in playlist controller

typo in previous refactor

  fix: #25997